force-app/main/default/objects/Student_Custody__c.object
<CustomObject>
    <description>The Student Custody object stores data describing the individuals with custody of the student.</description>
    <fields>
        <fullName>Custody_Name__c</fullName>
        <description>Adoptive father’s name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Custody Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custody_Relationship__c</fullName>
        <label>Custody Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Custody_Relationship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <description>The Program Enrollment record of the student.</description>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Student Custody</relationshipLabel>
        <relationshipName>Student_Custody</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Group</label>
        <referenceTo>Enrollment_Component__c</referenceTo>
        <relationshipLabel>Student Custody</relationshipLabel>
        <relationshipName>Student_Custody</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student Custody</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Custody_Relationship__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{000}</displayFormat>
        <label>Custody Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Custody</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>