force-app/main/default/objects/Student_Custody__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Custody_Relationship__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>